--- a/simplicity/servicos.html
+++ b/simplicity/servicos.html
@@ -15,7 +15,7 @@
 
             <nav>
                 <!-- O comportamento deste link será feito via Javascript -->
-                <h2><a href="">Menu &equiv;</a></h2>
+                <h2><a href="" id="menu">Menu &equiv;</a></h2>
 
                 <ul class="links-menu">
                     <li><a href="index.html">Home</a></li>
@@ -62,6 +62,8 @@
         <br>Senac Penha - 2022</p>
 
     </footer>
+
+    <script src="js/script.js"></script>
     
 </body>
 </html>
