--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -14,9 +14,15 @@
         <div id="header-container">
             <h2>LEO RIBEIRO</h2>
 
-            <nav>
+            <div id="menu-btn">
+                <div class="line rot"></div>
+                <div class="line short vanish"></div>
+                <div class="line shorter"></div>
+            </div>
 
-                <ul id="menu">
+            <nav class="nav-menu">
+
+                <ul class="" id="menu">
                     <li><a href="#pc">Sobre</a></li>
                     <li><a href="#contatos">Contato</a></li>
                 </ul>
@@ -202,6 +208,8 @@
 
 
     </footer>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
