--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -39,7 +39,7 @@
 
             <p>Incidunt illum, voluptatem reprehenderit quibusdam minus temporibus rem fugiat odit earum ipsum ratione excepturi quasi fugit suscipit libero, recusandae repellat culpa. Aspernatur natus omnis ad aperiam magnam suscipit, praesentium quasi.</p>
 
-            <form action="" method="post">
+            <form action="https://formspree.io/f/moqrkzak" method="post">
 
                 <div>
                     <label for="nome">Nome:</label>
@@ -142,6 +142,8 @@
                 </div>
 
                 <button type="submit">Enviar</button>
+                
+                <p id="my-from-status"></p>
 
             </form>
 
