Valores alterados para o Email

--- a/simplicity/contato.html
+++ b/simplicity/contato.html
@@ -68,29 +68,29 @@
 
                 <div id="excecao">
                     <p>Sexo:</p>
-                    <input type="radio" name="sexo" id="masculino">
+                    <input value="Masculino" type="radio" name="sexo" id="masculino">
                     <label for="masculino">Masculino</label>
                     
-                    <input type="radio" name="sexo" id="feminino">
+                    <input value="Feminino" type="radio" name="sexo" id="feminino">
                     <label for="feminino">Feminino</label>
                     
-                    <input type="radio" name="sexo" id="non-binary">
+                    <input value="Não Binário" type="radio" name="sexo" id="non-binary">
                     <label for="non-binario">Não binário</label>
 
-                    <input type="radio" name="sexo" id="prefer">
+                    <input value="Prefiro não dizer" type="radio" name="sexo" id="prefer">
                     <label for="pref">Prefiro não dizer</label>
 
                 </div>
 
                 <div id="excecao">
                     <p>Interesses</p>
-                    <input type="checkbox" name="inter" id="design">
+                    <input value="Design" type="checkbox" name="Interesses" id="design">
                     <label for="">Design</label>
 
-                    <input type="checkbox" name="inter" id="marketing">
+                    <input value="Marketing" type="checkbox" name="Interesses" id="marketing">
                     <label for="">Marketing</label>
 
-                    <input type="checkbox" name="inter" id="programacao">
+                    <input value="Programação" type="checkbox" name="Interesses" id="programacao">
                     <label for="">Programação</label>
 
                 </div>
