--- a/chuva-challenge/index.html
+++ b/chuva-challenge/index.html
@@ -58,7 +58,7 @@
 
         <div id="perfil">
             <p>Bem vindo!</p>
-            <h4 class="email">alguem12@galoascience.com</h4>
+            <h4 class="menor">alguem12@galoascience.com</h4>
             <img src="imagens/image.png" alt="foto de perfil">
             <p class="notification">2</p>
         </div>
